Add build system slide

--- a/cpp-setup.tex
+++ b/cpp-setup.tex
@@ -301,6 +301,27 @@ Build and install the following by hand (for Bio-Formats):
   \end{itemize}
 \end{frame}
 
+\section{Building C++ code}
+
+\subsection{Build systems}
+
+\begin{frame}
+  \frametitle{Available build systems}
+  There are many available build systems, which include:
+
+  \begin{itemize}
+  \item Make
+  \item GNU Autotools
+  \item CMake
+  \item SCons
+  \item Jam
+  \item qmake
+  \item ant / maven / gradle
+  \end{itemize}
+\end{frame}
+
+
+
 \section*{Acknowledgements}
 
 \frame{
