Add gtest to cmake demo

--- a/cpp-setup.tex
+++ b/cpp-setup.tex
@@ -320,7 +320,7 @@ Build and install the following by hand (for Bio-Formats):
   \end{itemize}
 \end{frame}
 
-\subsection{cmake}
+\subsection{cmake introduction}
 
 \begin{frame}
   \frametitle{\cmd{cmake} overview}
@@ -344,18 +344,30 @@ Build and install the following by hand (for Bio-Formats):
   \end{itemize}
 \end{frame}
 
+\subsection{cmake demonstration}
+
 \begin{frame}
   \frametitle{Using \cmd{cmake} (live demo)}
-  \scriptsize
   \begin{block}{Basic cmake usage}
     \begin{itemize}
       \item Basic options
       \item Available generators
     \end{itemize}
   \end{block}
+  \begin{block}{Building \pkg{gtest} on MacOS X}
+    \begin{itemize}
+      \item Running cmake
+      \item Building
+    \end{itemize}
+  \end{block}
+\end{frame}
+
+\begin{frame}
+  \frametitle{Using \cmd{cmake} (live demo)}
   \begin{block}{Building Bio-Formats on MacOS X}
     \begin{itemize}
       \item Running cmake
+      \item Cache variables
       \item Building
       \item Testing
       \item Installing
